<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.Doctor_Register">


    <androidx.cardview.widget.CardView
        android:layout_marginTop="30dp"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="-30dp"
        android:id="@+id/docregister_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center|top"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                tools:ignore="UselessParent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:layout_alignParentStart="true"
                        android:paddingBottom="20dp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:text="@string/out"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <com.github.angads25.toggle.widget.LabeledSwitch
                            android:layout_width="50dp"
                            app:on="true"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:id="@+id/switchForLogin"
                            app:textOn=""
                            app:textOff=""
                            app:colorOn="@color/flutter_blue"
                            android:layout_height="25dp">
                        </com.github.angads25.toggle.widget.LabeledSwitch>
                        <TextView
                            android:textStyle="bold"
                            android:text="@string/in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>


                </RelativeLayout>

                <FrameLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="120dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="end|center"
                    android:layout_height="120dp">

                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/oval"
                        android:layout_width="110dp"
                        android:layout_height="110dp"/>

                    <androidx.cardview.widget.CardView

                        android:layout_gravity="center"
                        app:cardCornerRadius="45dp"
                        android:layout_width="90dp"
                        android:layout_height="90dp">

                        <LinearLayout
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:tint="@color/black"
                                android:src="@drawable/doctor"
                                android:layout_width="50dp"
                                android:layout_height="50dp"/>

                            <TextView

                                android:textColor="@color/text_color"
                                android:textStyle="bold"
                                android:lines="2"
                                android:textSize="10sp"
                                android:text="@string/upload_photo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </FrameLayout>






                    <ImageView
                        android:id="@+id/logoImage"
                        android:layout_gravity="center|top"
                        android:src="@drawable/logo_doc"
                        android:layout_width="170dp"
                        android:layout_height="80dp"
                        tools:ignore="UnusedAttribute" />








            </FrameLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:paddingLeft="10dp"
                    android:paddingBottom="10dp"
                   android:paddingRight="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="bottom"
                        android:clipToPadding="false">
                        <EditText

                            style="@style/MyEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:hint="@string/doctor_name" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="bottom"
                        android:clipToPadding="false">
                        <EditText
                            style="@style/MyEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:hint="@string/speciality" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="bottom"
                        android:clipToPadding="false">

                        <EditText
                            style="@style/MyEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:hint="@string/mobile_number"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="bottom"
                        android:clipToPadding="false">

                        <EditText
                            android:drawableEnd="@drawable/ic_timer"
                            style="@style/MyEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:drawablePadding="15dp"
                            android:paddingBottom="8dp"
                            android:singleLine="true"
                            android:hint="@string/slot_time"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="bottom"
                        android:clipToPadding="false">

                        <EditText
                            android:drawableEnd="@drawable/ic_timer"
                            style="@style/MyEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"

                            android:paddingBottom="8dp"
                            android:singleLine="true"
                            android:hint="@string/open_timing"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="bottom"
                        android:clipToPadding="false">
                        <EditText
                            style="@style/MyEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="bottom"
                        android:clipToPadding="false">

                        <EditText
                            style="@style/MyEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout

                        android:background="@drawable/com_button_logo"
                        android:layout_marginTop="20dp"
                        android:layout_width="180dp"
                        android:layout_height="40dp">


                        <TextView

                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:text="@string/save"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>




                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="5dp"

                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="25dp">
                        <TextView
                            android:drawableTint="@color/flutter_blue"
                            android:drawableStart="@drawable/ic_notification"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:text="@string/available_credits"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            tools:ignore="UnusedAttribute" />

                        <TextView
                            android:paddingLeft="10dp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/red"
                            android:text="200"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/text_color"
                            android:text="@string/need_credits"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/flutter_blue"
                            android:text="@string/buy_here"
                            android:paddingLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <ImageView
                            android:layout_marginStart="10dp"
                            android:src="@drawable/cart_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>







        </LinearLayout>




    </androidx.cardview.widget.CardView>


</LinearLayout>