<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="1"
    android:id="@+id/signup_layout"
    android:orientation="vertical"
    android:background="@drawable/background5"
    android:layout_height="match_parent"
    tools:context=".Register.SignUp">




    <RelativeLayout
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <TextView
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/welcome_to"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    <LinearLayout

        android:layout_weight="0.9"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="30dp"
                android:layout_marginBottom="-30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout

                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout

                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/logo_doc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>



                    <LinearLayout
                        android:layout_margin="15dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorTextColor="@color/red"
                            android:id="@+id/emailError"
                            android:gravity="bottom"
                            android:clipToPadding="false">

                            <EditText
                                android:id="@+id/emialLogin"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                style="@style/MyEditTextStyle"

                                android:inputType="textEmailAddress"
                                android:hint="@string/email"
                                />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:id="@+id/passwordError"
                            android:layout_height="wrap_content"
                            android:gravity="bottom"
                            android:clipToPadding="false">

                            <EditText
                                android:id="@+id/passwordLogin"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                style="@style/MyEditTextStyle"
                                android:singleLine="true"
                                android:hint="@string/password"
                                />

                        </com.google.android.material.textfield.TextInputLayout>
                        <TextView
                            android:id="@+id/forgotPassword"
                            android:textStyle="bold"
                            android:textColor="@color/flutter_blue"
                            android:text="@string/forgot_password"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="RtlSymmetry" />
                        <LinearLayout
                            android:id="@+id/login"
                            android:background="@drawable/com_button_logo"
                            android:layout_marginTop="25dp"
                            android:layout_width="150dp"
                            android:layout_height="40dp">


                            <TextView
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:gravity="center"
                                android:text="@string/log_in_main"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>



                        </LinearLayout>


                        <LinearLayout
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textStyle="bold"
                                android:textColor="@color/text_color"
                                android:text="@string/new_here"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:id="@+id/newSignUp"
                                android:textStyle="bold"
                                android:textColor="@color/flutter_blue"
                                android:text="@string/sign_up_login"
                                android:paddingStart="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>



                    </LinearLayout>


                </LinearLayout>




            </androidx.cardview.widget.CardView>
        </LinearLayout>




    </LinearLayout>


</LinearLayout>